# vod

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
baseline_rgb64_cond/: rgb64_cond_report.md  rgb64_cond_result.json
baseline_rgb64_conv/: rgb64_conv_report.md  rgb64_conv_result.json
baseline_v16/: unconditional_fidelity_report_v16.md  unconditional_fidelity_result_v16.json  v16_diffusion_forensic.json
configs/: curriculum_default.json  ldm_baseline.yaml  vod_100m_hvbd.yaml  vod_100m_no_anchor.yaml  vod_300m_hvbd.yaml  vodt_300m_motion.yaml
docs/: B200_runbook.md  HVBD_introduction.md  experiment_matrix.md  hf_modular_mapping.md  instruction_for_image_generator.md  omni_diffusion_lessons_for_vod.md  paper_v16_baseline.md  report_to_codex_stage1_stage2.md  report_to_codex_v16_next.md  single_image_anchor_design.md  vod_algorithms.md  vod_backbone_selection.md  vod_chladni_model.md  vod_chladni_related_research.md  vod_full_mathematical_formulation.md  vod_hf_compatibility_plan.md  vod_hypothesis_validation_plan.md  vod_math_model.md  vod_math_simplification.md  vod_pseudocode.md  vod_related_research.md
opu/: __init__.py  actions.py  actuators.py  config.py  core.py  stats.py
prototype/: README.md  STATE_DICT_KEYS.md  model_index.json  modular_model_index.json  run_gate0_verify.py  run_generate.py  run_minimal_prototype.py  run_native_vod_validation.py  run_ttnm_diagnostic.py  run_vod_product_validation.py  unconditional_fidelity_report.md  unconditional_fidelity_report_v2.md  unconditional_fidelity_report_v3.md  unconditional_fidelity_report_v3_big.md  unconditional_fidelity_report_v4.md  unconditional_fidelity_report_v5.md  unconditional_fidelity_report_v7.md
scripts/: build_forecast_trace.py  build_hvbd_registry.py  crop_anchor_dataset.py  eval_samples.py  (+19 more)
(+79 files in other folders)
